Finished other pages, removed trademarked image

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Home Page</title>
 </head>
 <body>
-	<h1>Odin Recipes</h1>
+	<h1>Odin Recipes:</h1>
 	<ul>
-		<li><a href="./recipes/taco_soup.html">Taco Soup</a></li>
-		<li><a></a></li>
-		<li><a></a></li>
+		<li><h3><a href="./recipes/taco_soup.html">Taco Soup</a></h3></li>
+		<li><h3><a href="./recipes/stir_fry.html">Beef Stir Fry</a></h3></li>
+		<li><h3><a href="./recipes/french_toast.html">French Toast</a></h3></li>
 	</ul>	
 </body>
 </html>
