--- a/recipes/taco_soup.html
+++ b/recipes/taco_soup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<title>Taco Soup Recipe</title>
 </head>
 <body>
 	<h1>Taco Soup</h1>
 	<br>
-	<img src="../images/taco_soup.jpg" alt="taco soup">
+	<img src="../images/taco_soup.jpg" alt="taco soup" width="500" height="350" title="unironically the hardest part of this entire project was finding literally just fucking t h r e e good copyright-free images.">
 	<h2>Description: </h2>
 	<p>This easy 30 minute recipe will inevitably grant you with the mexican recipe to end all mexican cuisine: taco soup. Not only will this taco soup prove to be delicious and worthwhile, it will also be relatively nutrious, as it is packed full of protein as well as vegetables, which you typically aren't eating as much of as you should. Without further ado, let's commence the recipe!</p>
 	<h2>Ingredients: </h2>
@@ -36,7 +36,7 @@
 		<li>Heat oil in a Dutch oven and saute the ground beef. Then, add a touch of taco seasoning to the beef.</li>
 		<li>Add the vegetables, remaining ingredients, and seasoning to the cooked ground beef. Simmer on low for 12-15 minutes, and then serve whilst it's still hot.</li>
 		<li>(Optional) Add any desired toppings onto the soup.</li>
-	</ol>	
+	</ol>
+	<h4><a href="../index.html">Home Page</a></h4>	
 </body>
 </html>
-<!-- resize image? -->
