Added some text styling

--- a/recipes/stir_fry.html
+++ b/recipes/stir_fry.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>Beef Stir Fry Recipe</title>
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
-	<h1>Beef Stir Fry</h1>
+	<h1 class="recipe">Beef Stir Fry</h1>
 	<br>
 	<img src="../images/stir_fry.jpg" alt="stir fry" width="300" height="300">
 	<h2>Description: </h2>
