--- a/recipes/taco_soup.html
+++ b/recipes/taco_soup.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>Taco Soup Recipe</title>
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
-	<h1>Taco Soup</h1>
+	<h1 class="recipe">Taco Soup</h1>
 	<br>
 	<img src="../images/taco_soup.jpg" alt="taco soup" width="500" height="350" title="unironically the hardest part of this entire project was finding literally just fucking t h r e e good copyright-free images.">
 	<h2>Description: </h2>
@@ -21,12 +22,12 @@
 		<li>Tomatoes</li>
 		<li>Beef Broth</li>
 	</ul>
-	<h3>(Optional) Toppings: </h3>
-	<ul>
+	<h4>(Optional) Toppings: </h4>
+	<ul class="optional">
 		<li>Crushed Tortilla Chips</li>
 		<li>A spoonful of sour cream</li>
 		<li>A diced avocado or guacamole</li>
-		<lo>Shredded Cheese</lo>
+		<li>Shredded Cheese</li>
 		<li>Fresh cilantro or green onions</li>
 		<li>Lime wedges</li>
 	</ul>	
