--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>French Toast Recipe</title>
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
-	<h1>French Toast</h1>
+	<h1 class="recipe">French Toast</h1>
 	<br>
 	<img src="../images/french_toast.jpg" alt="french toast" width="400" height="350">
 	<h2>Description: </h2>
@@ -16,7 +17,7 @@
 		<li>Milk</li>
 		<li>Salt</li>
 		 <li>2/3 Cup Milk</li>
-		<li>1 tbsp unsalted butter <h6>(or as much as you like)</h6></li>
+		<li>1 tbsp unsalted butter</li>
 		<li>(Optional)1 tsp vanilla extract</li>
 		<li>(Optional)1/4 tsp ground cinnamon</li>
 	</ul>
